dnl Process this file with autoconf 2.52+ to produce a configure script.

AC_INIT(serialcheck, 0.1)
AC_PREREQ(2.52)
AM_INIT_AUTOMAKE([gnu])
AC_CONFIG_HEADERS([serialcheck-config.h])

dnl Make sure anyone changing configure.ac/Makefile.am has a clue
AM_MAINTAINER_MODE

dnl Checks for programs
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_GCC_TRADITIONAL

dnl -----------------
dnl Configure options
dnl -----------------

AM_PROG_AS

dnl --------------------------
dnl autoconf output generation
dnl --------------------------

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
